login button on mobile not displaying correctly after deployment

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -95,12 +95,13 @@ height: 80px;
 }
 /*mobile login*/
 .sign-upParent{
+
   display:flex;
   justify-content: center;
-  width: 10px; 
+  width: 8px; 
   position: absolute; 
   top: 20px;
-  left: 135px;
+  left: 120px;
 
   background-color: #003B6D;
 
@@ -112,6 +113,7 @@ height: 80px;
   }
 #sign-upDirect{
   color: white;
+  font-size: .8rem;
  
 }
 
